Finished the UI part. No request processing on the server side.

--- a/janus-plugin/src/main/webapp/css/projectBootstrap.css
+++ b/janus-plugin/src/main/webapp/css/projectBootstrap.css
@@ -48,4 +48,5 @@
     padding: 8px 35px 8px 14px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     border-radius: 4px;
+    font-size: 1.2em;
 }
