New users will now be labeled so that they can be identified on the project bootstrap page. Project leads are given all access rights to Confluence and now set the default space access right according to codecentric standards.

--- a/janus-plugin/src/main/webapp/css/projectBootstrap.css
+++ b/janus-plugin/src/main/webapp/css/projectBootstrap.css
@@ -66,3 +66,18 @@
     border-radius: 4px;
     font-size: 1.2em;
 }
+
+.new-user {
+    background-color: #3A87AD;
+    padding: 1px 4px 2px;
+    border-radius: 3px;
+    font-weight: bold;
+    line-height: 14px;
+    color: white;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    white-space: nowrap;
+    vertical-align: baseline;
+    position: absolute;
+    right: 30px;
+    top: 1px;
+}
